# cylindrical_epoch

./: README.md
SDF/C/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  Makefile-objs
SDF/C/CMake/: CheckMPIVersion.cmake  mpi_version.c
SDF/C/include/: sdf.h  sdf_derived.h  sdf_extension.h  sdf_helper.h  sdf_list_type.h  sdf_vector_type.h  stack_allocator.h
SDF/C/src/: CMakeLists.txt  sdf_control.c  sdf_control.h  sdf_derived.c  sdf_extension_util.c  sdf_extension_util.h  sdf_helper.c  sdf_input.c  sdf_input.h  sdf_input_cartesian.c  sdf_input_cartesian.h  sdf_input_point.c  sdf_input_point.h  sdf_input_station.c  sdf_input_station.h  sdf_modify.c  sdf_modify.h  sdf_output.c  sdf_output.h  sdf_util.c  sdf_util.h  stack_allocator.c
SDF/FORTRAN/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  Makefile-deps  Makefile-objs
SDF/FORTRAN/CMake/: CheckMPIVersion.cmake  ConfigurePackTarget.cmake  PackSDFConfig.cmake  pack.cmake.in
SDF/FORTRAN/src/: CMakeLists.txt  gen_commit_string.sh  mpi_version.f90  pack.py  pack.sh  sdf.f90  sdf_common.f90  sdf_control.f90  sdf_input.f90  sdf_input_cartesian.f90  sdf_input_cartesian_r4.f90  sdf_input_cartesian_r8.f90  sdf_input_cartesian_ru.f90  sdf_input_point.f90  sdf_input_point_r4.f90  sdf_input_point_r8.f90  sdf_input_point_ru.f90  sdf_input_r4.f90  sdf_input_r8.f90  sdf_input_ru.f90  sdf_input_station.f90  sdf_input_station_r4.f90  sdf_input_station_r8.f90  sdf_input_station_ru.f90  sdf_input_util.f90  sdf_job_info.f90  sdf_md5.f90  sdf_output.f90  sdf_output_cartesian.f90  sdf_output_cartesian_r4.f90  sdf_output_cartesian_r8.f90  sdf_output_cartesian_ru.f90  sdf_output_point.f90  sdf_output_point_r4.f90  sdf_output_point_r8.f90  sdf_output_point_ru.f90  sdf_output_r4.f90  sdf_output_r8.f90  sdf_output_ru.f90  sdf_output_source.f90  (+7 more)
SDF/IDL/: IsoPlot.pro  LICENSE  LoadSDF.pro  ReadNameVal.pro  SDFHelp.pro  Start.pro  StartPIC.pro  idlrc  widget.pro
SDF/Matlab/: GetConstantSDF.m  GetDataSDF.m  GetLagrangianMeshSDF.m  GetPlainMeshSDF.m  GetPlainVariableSDF.m  GetPointMeshSDF.m  GetPointVariableSDF.m  LICENSE  ReadNameVal.m
SDF/VisIt/: .gitignore  .gitlab-ci.yml  LICENSE  SDF1.xml  SDF2.xml  avtSDFFileFormat.C  avtSDFFileFormat.h  avtSDFOptions.C  avtSDFOptions.h  build  build.cmd
SDF/VisIt/MISC/: build_visit2_7_3.patch  build_visit2_9_2.patch  visit2_7_3-Legend.patch  visit2_9_2-Legend.patch
SDF/VisIt/MISC/v2.13.3_ub18/: PluginVsInstall.cmake  VisItLibraryDependencies.cmake
SDF/documentation/: .gitignore  sdf_format.tex
SDF/utilities/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  build  gen_commit_string.cmake  gen_commit_string.sh  sdf2ascii.adoc  sdf2ascii.c  sdf_python.c  sdf_vtk_writer.c  sdfdiff.c  sdffilter.adoc  sdffilter.c  sdfpy_install.cmake.in  setup.py  setup.py.in  test.py
SDF/utilities/sdf_helper/: __init__.py  read_nameval.py  sdf_helper.py  visit_cmap.py
epoch_axial/: Makefile
epoch_axial/example_decks/: Wakefield_Lifschitz09_JCompPhys228.deck  bremsstrahlung.deck  current_density_test.deck  field_ionisation.deck  gaussian_pulse.deck  moving_window.deck  ncs_laser_beam.deck  restart.deck  two_stream_instability.deck  uniform_density_load.deck
epoch_axial/src/: boundary.F90  constants.F90  epoch2d.F90  fields.f90  laser.f90  particles.F90  shared_data.F90
epoch_axial/src/deck/: deck.F90  deck_boundaries_block.f90  deck_collision_block.F90  deck_control_block.F90  deck_io_block.F90  deck_particle_probe_block.F90  deck_species_block.F90  strings.f90
epoch_axial/src/housekeeping/: balance.F90  current_smooth.F90  finish.f90  mpi_routines.F90  mpi_subtype_control.f90  partlist.F90  redblack_module.f90  setup.F90  split_particle.F90  window.F90
epoch_axial/src/include/: particle_head.inc  particle_to_grid.inc
epoch_axial/src/include/bspline3/: b_part.inc  e_part.inc  gx.inc  gxfac.inc  hx_dcell.inc  part_var.inc
epoch_axial/src/include/tophat/: b_part.inc  e_part.inc  gx.inc  gxfac.inc  hx_dcell.inc  part_var.inc
epoch_axial/src/include/triangle/: b_part.inc  e_part.inc  gx.inc  gxfac.inc  hx_dcell.inc  part_var.inc
epoch_axial/src/io/: calc_df.F90  diagnostics.F90  dist_fn.F90
epoch_axial/src/physics_packages/: background_collisions.F90  bremsstrahlung.F90  collision_ionise.F90  collisions.F90  ionise.F90  photons.F90
epoch_axial/src/user_interaction/: helper.F90
